# tk.lms

./: .gitignore  .gitmodules  .skyignore  README.md  pyproject.toml
.zed/: settings.json
data/: 2412_neuripsAnalyze.prompting.customfmt.txt
experiments/2605/: 10-model-meta-crawler.md  1001_collect_model_meta.py  1002_collect_vibes.py  1003_serve_viewer.py  litellm_providers.py  metacli.py  viewer.html
nbs/: 2408_singleModel.py  claudit.conf.py  claudit.py  claudit.viz.py
nbs/24/: 2408_gpt2.py  2408_gptCasing.py  2408_singleModelMnist.py  2410_trainGptTransformers.py  2412_neuripsAnalyze.py
nbs/25/: 2501_arcLoadModelJaxline.py  2506_trickMeQC.py
nbs/26/: 2603_banano2.py  2603_bananoSee.py  2603_bananogen.py  2606_ds.py  2606_experiment.py  2606_icl_ablation.py  2606_litelmproxyagenta.py  2606_score_synth.py  2606_simulate_synth.py  2606_tabicl_pele.py  2606_tmapi_client.py  2606_wc2026_predict.py
nbs/demos/: 2406_talkPhi.py  2504_penzaiDevice.py
notebooks/: 2407_talkMetrics.py  2408_gptCasing.py  2408_minstCompare.py  2408_ngrams.py  2408_plotDemos.py  2408_singleModel.py  2408_singleModelMnist.py  2410_trainGptTransformers.py  2412_arcEncoderView.py  2412_arcVisualize.py  2412_neuripsAnalyze.py  2412_neuripsFetch.py  2505_trickMeQC.py
notebooks/demos/: 2408_penzai.py  2409_astDemo.py  2501_peftune.py  2504_customDevice.py  README.md
src/tk/: __init__.py  prepro_hf.py  train_hf.py
src/tk/arc/: __main__.py  baseline.py  converters.py  encoding.py  generator.py  p3dsl_to_df.py  train.py
src/tk/arc/expt/: __main__.py  dsl_to_dataset.py  encoding.py  gpt2.py
src/tk/arc/expt/cfg/: autoregressive.py  baseline.py
src/tk/arc/p3/: __init__.py  const.py  dsl.py  solver.py
src/tk/configs/: prepro.yaml  train.yaml
src/tk/configs/hydra/: default.yaml
src/tk/configs/paths/: default.yaml
src/tk/debate/: README.md  __main__.py  article.json  utils.py
src/tk/debate/biography/: eval_conversation.py  gen_conversation.py
src/tk/debate/configs/: main.py
src/tk/debate/gsm/: eval_gsm.py  gen_gsm.py
src/tk/debate/math/: eval_math.py  gen_math.py  plot.py
src/tk/debate/mmlu/: eval_mmlu.py  gen_mmlu.py
src/tk/eval/: code.py
src/tk/expt/: README.md  copy_task_experiment.py  eval_benchmarks.py  run.py  run_copy_experiment.py
src/tk/expt/examples/: transformer.py
src/tk/jaxline/: experiment.py  platform.py  train.py  train_test.py  utils.py  utils_test.py
src/tk/models/: api_adapter.py  gpt.py  gpt2.py  ngram.py  train.py
src/tk/nbs/: footie.py  utils_ds.py
src/tk/nbs/footie/: __init__.py  footie.py  priors.py
src/tk/puzzles/: gpt.py  main.py  tasks.py  utils.py  world.py
src/tk/rpe/: README.md  requirements.txt
src/tk/rpe/experiments/: config.py  constants.py  curriculum.py  example.py  range_evaluation.py  training.py  utils.py
src/tk/rpe/models/: positional_encodings.py  transformer.py  transformer_utils.py
src/tk/rpe/tasks/: task.py
src/tk/rpe/tasks/cs/: binary_addition.py  binary_multiplication.py  bucket_sort.py  compute_sqrt.py  duplicate_string.py  missing_duplicate_string.py  odds_first.py
src/tk/rpe/tasks/custom/: dependencies.py  twoval.py
src/tk/rpe/tasks/dcf/: modular_arithmetic_brackets.py  reverse_string.py  solve_equation.py  stack_manipulation.py
src/tk/rpe/tasks/regular/: cycle_navigation.py  even_pairs.py  modular_arithmetic.py  parity_check.py
src/tk/utils/: __init__.py  cache.py  cfg.py  func.py  log.py  pprint.py  pz.py  sky.py  tree.py  utils.py
src/tk/utils/colab/: server.py
src/tk/utils/data/: __init__.py  data.py  fetch.py  generate.py  generate_test.py  tokenizer.py  vocab.py
