[project]
name = "tk-llms"
version = "0.1.0"
description = "Some LLM experiments"
authors = [
    {"name" = "Toni Kukurin", "email" = "tkukurin@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "altair",
    "llama-cpp-python",
    "transformers[sentencepiece]",
    "accelerate",
    "datasets",
    "diskcache",
    "rich",
    "jax",  # todo cuda?
    "bitsandbytes",
    "ipykernel",
    "networkx",
    "scikit-learn",
    "numpy",
    "matplotlib",
    "scipy",
    "pandas",
    "einops",
    "evaluate",
    "pytest",
    "loguru",
    "tokenizers",
    "hydra-core",
    "penzai",
    "xminigrid",
    # "tensorboardx",
    # better experiment tracking (I think...)
    "aim>=3.24.0",
    # AIM requires plotly for `Figure`s
    "plotly>=5.23.0",
    # install for mimetypes!
    "nbformat>=4.2.0",
    "openai",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
tk-llms = { path = ".", editable = true }
