[project]
name = "tk-llms"
version = "0.1.0"
description = "Some LLM experiments"
authors = [
    {"name" = "Toni Kukurin", "email" = "tkukurin@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "altair",
    "llama-cpp-python",
    "transformers[sentencepiece]",
    "accelerate",
    "datasets",
    "diskcache",
    "rich",
    "jax[cpu]",
    "flax>=0.8.0",
    "optax>=0.2.0",
    "ipykernel",
    "networkx",
    "scikit-learn",
    "numpy",
    "matplotlib",
    "scipy",
    "pandas",
    "einops",
    "evaluate",
    "pytest",
    "loguru",
    "tokenizers",
    "hydra-core",
    "penzai",
    "xminigrid",
    # "tensorboardx",
    # "aim>=3.24.0",  # removed: aimrocks has no cp313 wheels
    "plotly>=5.23.0",
    # "kaleido",  # plotly to img
    # install for mimetypes!
    "nbformat>=4.2.0",
    "openai",
    # idk just seems cool for presentation
    "traceback-with-variables",
    # "table-to-ascii",
    "ipywidgets",
    # to check quickly train-test overlap levels
    "rapidfuzz",
    "tiktoken>=0.8.0",
    "dm-pix>=0.4.3",
    "wandb>=0.19.1",
    "ml-collections>=1.0.0",
    "wrapt>=1.17.0",
]

[project.optional-dependencies]
bnb = [
    # no support for mac?
    # https://huggingface.co/docs/bitsandbytes/v0.44.1/installation
    # uv add can't add only for platform?
    # https://discuss.python.org/t/uv-adds-feature-to-resolve-for-other-platforms/51513
    "bitsnbytes>=1.0.0",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
tk-llms = { path = ".", editable = true }

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.yapf]
based_on_style = "google"
split_penalty_after_opening_bracket = 0
dedent_closing_brackets = false
column_limit = 80
indent_width = 2

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
